--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
      - gambar/movie10.jpg
      - gambar/movie11.jpg
      - gambar/movie12.jpg
+     - gambar/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
